--- a/kmaps-app/public/index.html
+++ b/kmaps-app/public/index.html
@@ -74,9 +74,10 @@
     </body>
 </html>
 
+<!--
 <script
     src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
     crossorigin
-></script>
+></script>-->
 
 <!--<script src="./bootstrap-popover.js" crossorigin></script>-->
